--- a/Login form.html
+++ b/Login form.html
@@ -4,89 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Basic styling for the login form */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Center content horizontally */
+            align-items: center; /* Center content vertically */
+            height: 100vh; /* Full height of the viewport */
+        }
+        .container {
+            max-width: 400px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h2 {
+            text-align: center;
+        }
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
 
-<style>
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    margin-bottom: 8px;
-}
-
-input {
-    padding: 10px;
-    margin-bottom: 15px;
-}
-
-button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #45a049;
-}
-</style>
-
-<script>
-function login() {
-    var username = document.getElementById("username").value;
-    var password = document.getElementById("password").value;
-
-    // Perform validation or send login request to server
-    // For a simple example, we'll just log the credentials to the console
-    console.log("Username: " + username);
-    console.log("Password: " + password);
-}
-
-</script>
-
-
+           /* CSS to center text in div */
+        .centered-text {
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
+ 
+     <div class="container">
 
-    <div class="container">
+               <div class="centered-text">
+                           <!-- Company header -->
+                     <header style="background-color: #fff; color: #333; padding: 5px;">
+                     <h1 style="margin: 0;">Traffic Tech Qatar</h1>
+                     </header>
+               </div>
+
+
+    <!-- Login form -->
+    
+        <h2>Login</h2>
         <form id="loginForm">
-            <label for="username">Username:(HonVie)</label>
+            <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
-
-            <label for="password">Password:(Maybeee)</label>
+            <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-
-            <button type="button" onclick="login()">Login (Thirding)</button>
+            <button type="submit">Login</button>
         </form>
     </div>
-
-    <script src="script.js"></script>
+   
 </body>
 </html>
-
-
-
 
 
 
